Predicate CHANGELOG

2010-10-20
PostgreSQL Driver
*development of PostgreSQL driver based on libpq started, total rewrite of the 'pqxx' driver
Predicate
*add sanity checks to assignment operators
*add explicit ctors
*added BOOLEAN_TRUE_LITERAL, BOOLEAN_FALSE_LITERAL to DriverBehaviour, 1/0 by default, PostgreSQL driver changes them to TRUE/FALSE
SQLite Driver
*renamed from sqlite3 to sqlite for simplicity

2010-10-18
MySQL
*MySQL connections work again
*server supported by predicatefeaturestest: added -h option for host, -u for user, -p for password
**e.g. predicatefeaturestest --test tables -h myhost.com -u root -p pass mysql testdb

2010-10-17
DriverManager
*driversForMimeType() added
*driversInfo() removed as redundant

2010-10-13
*Port MySQL and SQLite drivers to the new API; some updates in other drivers but no tests

2010-09-05
*SDC
**added "operator==" option for generating operator== (deep comparison)

2010-08-19..21
*SDC
**properly generates code for more than one shared class per file
**add "#include <QSharedData>" is needed
*remaining bits: replaced KexiDB with Predicate
*Cursor, Driver and Connection no longer inherit QObject

2010-08-18
* replaced usage of 'row' term with 'record' in most places, e.g. Cursor::storeCurrentRow -> Cursor::storeCurrentRecord and RowEditBuffer with RecordEditBuffer, LookupFieldSchema::RowSource -> LookupFieldSchema::RecordSource

2010-08-06
*SDC
**added "namespace" option (string) for shared class, used in 
TODO: document SDC options

2010-08-05
*SDC
**added "with_from_to_map" option for shared class, generates extra methods as <file>_sdc.cpp:
***QMap<QString, QString> CLASSNAME::toMap() const;
***CLASSNAME(const QMap<QString, QString>& map, bool* ok);

2010-08-04
*SDC
**added support for protected option for data_member
**added support for "#if 0" blocks

2010-08-03
*ConnectionData is shared class (using SDC)

2010-07-21
*introducted Shared Data Compiler tool for creating implicitly shared classes