@@ -42,7 +42,7 @@ IF (POSTGRESQL_FOUND AND PQXX_FOUND AND PQXX_VERSION VERSION_GREATER PQXX_MIN_VE
 ENDIF (POSTGRESQL_FOUND AND PQXX_FOUND AND PQXX_VERSION VERSION_GREATER PQXX_MIN_VERSION AND PQXX_VERSION VERSION_LESS PQXX_MAX_VERSION)
 
 IF (POSTGRESQL_FOUND)
-   add_subdirectory(postgresql)
+#   add_subdirectory(postgresql)
 ENDIF (POSTGRESQL_FOUND)
 
 INCLUDE(FindFreeTDS)
