@@ -33,6 +33,7 @@ DriverBehaviour::DriverBehaviour()
         , ROW_ID_FIELD_RETURNS_LAST_AUTOINCREMENTED_VALUE(false)
         , QUOTATION_MARKS_FOR_IDENTIFIER('"')
         , USING_DATABASE_REQUIRED_TO_CONNECT(true)
+        , USE_TEMPORARY_DATABASE_FOR_CONNECTION_IF_NEEDED(false)
         , _1ST_ROW_READ_AHEAD_REQUIRED_TO_KNOW_IF_THE_RESULT_IS_EMPTY(false)
         , SELECT_1_SUBQUERY_SUPPORTED(false)
         , BOOLEAN_TRUE_LITERAL('1')
